# own-ultrareview

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
scripts/: build_platform_packages.sh
skills/ultrareview/: SKILL.md
skills/ultrareview/prompts/: scout-system.md  verifier-system.md
skills/ultrareview/references/: claude-code-agent.md  claude-code-command.md  claude-code.md  copilot-vscode.md  openclaw.md  release-gate.md  ultrareview.agent.md
skills/ultrareview/schemas/: candidate.schema.json  verification.schema.json
skills/ultrareview/scripts/: ultrareview_git_context.py  ultrareview_init.py  ultrareview_judge.py  ultrareview_next_task.py  ultrareview_prepare_tasks.py  ultrareview_prepare_verifiers.py  ultrareview_record_output.py  ultrareview_record_verification.py  ultrareview_report.py
src/ultrareview/: __init__.py  cli.py
src/ultrareview/gitcontext/: __init__.py  collect.py
src/ultrareview/runtime/: __init__.py  db.py  packets.py
src/ultrareview/validation/: __init__.py  contracts.py
tests/ultrareview/: SCENARIOS.md
tests/ultrareview/integration/: test_actions_cli.py  test_cli.py  test_e2e_cli_chain.py  test_failure_scenarios.py  test_git_context_script.py  test_init_script.py  test_record_and_verify_scripts.py  test_report_script.py  test_self_review.py  test_task_scripts.py  test_verification_and_judge_scripts.py
tests/ultrareview/unit/: test_contracts.py  test_db_scenarios.py  test_distribution_assets.py  test_git_collect.py  test_runtime_db.py  test_task_packets.py
