[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "own-ultrareview"
version = "0.1.0"
description = "Local UltraReview-style skill runtime with sequential agent task orchestration."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
own-ultrareview = "ultrareview.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
